@@ -1,6 +1,8 @@
 # Makefile.am for include/atalk/
 
 atalkincludedir = $(includedir)/atalk
+BUILT_SOURCES = 
+CLEANFILES =
 
 atalkinclude_HEADERS = \
 	adouble.h \
@@ -41,3 +43,12 @@ noinst_HEADERS = \
 	dsi.h \
 	ldapconfig.h \
 	fce_api.h
+
+EXTRA_DIST = afp_dtrace.d
+
+if WITH_DTRACE
+BUILT_SOURCES += afp_dtrace.h
+CLEANFILES += afp_dtrace.h
+afp_dtrace.h: $(top_srcdir)/include/atalk/afp_dtrace.d
+	$(LIBTOOL) --mode=execute dtrace -o afp_dtrace.h -h -s $(top_srcdir)/include/atalk/afp_dtrace.d
+endif
