@@ -57,6 +57,7 @@ dnl	AC_MSG_RESULT([         Samba sharemode interop: $neta_cv_have_smbshmd])
 	AC_MSG_RESULT([         LDAP support:            $netatalk_cv_ldap])
 	AC_MSG_RESULT([         dbus support:            $have_dbus_glib])
 	AC_MSG_RESULT([         dbus system directory:   $ac_cv_dbus_sysdir])
+	AC_MSG_RESULT([         dtrace probes:           $WDTRACE])
 	if test x"$use_pam_so" = x"yes" -a x"$netatalk_cv_install_pam" = x"no"; then
 		AC_MSG_RESULT([])
 		AC_MSG_WARN([ PAM support was configured for your system, but the netatalk PAM configuration file])
